# nu_plugin_jj

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  jj.rs  lib.rs  main.rs  plugin.rs
