[package]
name = "nu_plugin_jj"
version = "0.1.0"
edition = "2024"
description = "Nushell plugin for JJ repository prompt info"
license = "MIT"

[[bin]]
name = "nu_plugin_jj"

[dependencies]
nu-plugin = "0.111"
nu-protocol = "0.111"
jj-lib = "0.38"
thiserror = "2.0"
interprocess = "2.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
