[package]
name = "nu_plugin_jj"
version = "0.1.0"
edition = "2024"
description = "Nushell plugin for JJ repository prompt info"
license = "MIT"

[[bin]]
name = "nu_plugin_jj"

[dependencies]
nu-plugin = "0.113"
nu-protocol = "0.113"
jj-lib = "0.41"
pollster = "0.4"
thiserror = "2.0"
interprocess = "2.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
